// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsSection should call setUserSort with correct params when clicking asc button 1`] = `
<div
  className="col-span-1"
>
  <div
    className="rounded overflow-hidden shadow-lg"
  >
    <div
      className="px-6 py-4 bg-slate-100"
    >
      <div
        className="font-bold text-xl mb-2"
      >
        Controls
      </div>
      <div
        className="grid grid-cols-2 gap-4"
      >
        <div
          className="col-span-1"
        >
          <button
            className="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SORT ASC
          </button>
        </div>
        <div
          className="col-span-1"
        >
          <button
            className="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SORT DESC
          </button>
        </div>
        <div
          className="col-span-2"
        >
          <button
            className="w-full bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SUBMIT
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ControlsSection should call setUserSort with correct params when clicking desc button 1`] = `
<div
  className="col-span-1"
>
  <div
    className="rounded overflow-hidden shadow-lg"
  >
    <div
      className="px-6 py-4 bg-slate-100"
    >
      <div
        className="font-bold text-xl mb-2"
      >
        Controls
      </div>
      <div
        className="grid grid-cols-2 gap-4"
      >
        <div
          className="col-span-1"
        >
          <button
            className="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SORT ASC
          </button>
        </div>
        <div
          className="col-span-1"
        >
          <button
            className="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SORT DESC
          </button>
        </div>
        <div
          className="col-span-2"
        >
          <button
            className="w-full bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SUBMIT
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ControlsSection should render correctly when isLoading is false 1`] = `
<div
  className="col-span-1"
>
  <div
    className="rounded overflow-hidden shadow-lg"
  >
    <div
      className="px-6 py-4 bg-slate-100"
    >
      <div
        className="font-bold text-xl mb-2"
      >
        Controls
      </div>
      <div
        className="grid grid-cols-2 gap-4"
      >
        <div
          className="col-span-1"
        >
          <button
            className="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SORT ASC
          </button>
        </div>
        <div
          className="col-span-1"
        >
          <button
            className="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SORT DESC
          </button>
        </div>
        <div
          className="col-span-2"
        >
          <button
            className="w-full bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SUBMIT
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ControlsSection should render correctly when isLoading is true 1`] = `
<div
  className="col-span-1"
>
  <div
    className="rounded overflow-hidden shadow-lg"
  >
    <div
      className="px-6 py-4 bg-slate-100"
    >
      <div
        className="font-bold text-xl mb-2"
      >
        Controls
      </div>
      <div
        className="grid grid-cols-2 gap-4"
      >
        <div
          className="col-span-1"
        >
          <button
            className="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SORT ASC
          </button>
        </div>
        <div
          className="col-span-1"
        >
          <button
            className="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4"
            onClick={[Function]}
          >
            SORT DESC
          </button>
        </div>
        <div
          className="col-span-2"
        >
          <button
            className="button w-full bg-slate-500 text-white font-bold py-2 px-4 cursor-not-allowed"
            disabled={true}
          >
            Loading...
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
